--- a/style.css
+++ b/style.css
@@ -4,11 +4,16 @@
 }
 body {
   display: flex;
-  --tdSize: 70;
+  flex-direction: column;
+  --tdSize: 68;
   color: black;
-  justify-content: center;
+  align-items: center;
+}
+h1 {
+  text-align: center;
 }
 table {
+  width: calc(var(--tdSize) * 18px);
   border-spacing: 3px;
 }
 table,
@@ -28,6 +33,7 @@ td {
 }
 th {
   width: calc(1px * var(--tdSize));
+  max-width: calc(1px * var(--tdSize));
   height: calc(0.5px * var(--tdSize));
 }
 td > div {
@@ -42,10 +48,10 @@ td > div > div {
   width: 100%;
 }
 .elemento__num {
-  margin-right: 0.3rem;
+  margin-right: 0.2rem;
   font-weight: bold;
   align-self: flex-start;
-  font-size: 19px;
+  font-size: calc(0.2px * var(--tdSize));
 }
 .elemento__name {
   font-weight: 700;
@@ -67,6 +73,25 @@ td > div > div {
   font-weight: 700;
 }
 
+footer {
+  margin-top: 20px;
+  width: 100%;
+}
+.legenda {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  width: 80%;
+  margin: auto;
+}
+.legenda__element {
+  display: flex;
+  margin-bottom: 10px;
+}
+.legenda__square {
+  height: 20px;
+  width: 20px;
+  margin-right: 8px;
+}
 .space__between {
   height: 1rem;
 }
